[31.January 2009]
- gfx/stone_firespitter.png: replaced by nogath's
- iitfv.rb: Federico Borrone AKA nogath added to Credits

[30.January 2009]
- gfx/fireball.png: gfx/brick* : replaced by nogath's
- wall.rb: image filenames updated
- entities/key.rb, entities/lock.rb, gfx/key_*, gfx/lock_*:
  old graphics of lock and keys replaced by Magnus'es

[29.January 2009]
- gfx/fireball.png, gfx/stone_fireballspitter.png,
  entities/fireball.png, entities/fireballspitter.rb,
  testing level FireballSpitter:
  created new game object: statue of dragon's head which spits fireballs

[27.January 2009]
- utils/make_release.rb: task :ftp commented out
- monster.rb: should have already be removed
- TODO: added results of my communication with MasterPhW

[26.January 2009]
- exit.rb: Exit#z # -> -100 (should be behind everything else)
- levels of DefaultCampaign: updated position of exit

[25.January 2009]
- exit.rb, location.rb: Exit is not a static object
- gfx/exit.png: replacement for old Exit by Magnus Nygaard
- level Arctic Tutorial: updated position of exit

[[[release 0.8] [01/24/2008] ----------------------------------------

[24.January 2009]
- freevikings.rb: added option -c to load config from non-default path
- initfv.rb, topmenu.rb: fixed problems caused by yesterday's digging in Menu
- config/config.rb: sample user's configuration file
- docs/user_manual/usermanual.xml: added chapter about configuration file
- location.rb: exit is visible again (disappeared thanks to yesterday's
  painting cleanup)
- fixes of levels before release:
  - level SwitchPlace: fixed (used to add static objects directly through
    Location#static_objects#add => static objects were invisible...)
  - entities/flyingtroll.rb: removed requirement of monster.rb
  - entities/lock.rb: Added error which deleted lock on unlocking attempt
    even if key wasn't right
  - entities/ladder.rb: Ladder is semi-solid again
  - level Climbin' : fixed Ladder-system

[23.January 2009]