@@ -1,0 +1,4 @@
+Jakub Pavlik:     programming, graphics, levels
+Ingo Fulfs:       graphics, music
+Magnus Nygaard:   graphics
+Federico Borrone: graphics
